home/jellyfin/jellyfin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jellyfin
  name: jellyfin-deployment
  labels:
    app: jellyfin
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: computemule
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        supplementalGroups:
          - 487
          - 484
        fsGroup: 1000
      containers:
      - image: docker.io/jellyfin/jellyfin:latest
        name: jellyfin
        resources:
          limits:
            gpu.intel.com/i915: 1
          requests:
            memory: "512Mi"
            cpu: "500m"
        securityContext:
          capabilities: {}
        volumeMounts:
          - name: jellyfin-pvc
            mountPath: /config
            subPath: jellyfin/config
          - name: jellyfin-pvc
            mountPath: /cache
            subPath: jellyfin/cache
          - name: jellyfin-pvc
            mountPath: /media/torrents
            subPath: torrents
        ports:
          - containerPort: 8096
            name: jellyfin-http
        livenessProbe:
          httpGet:
            path: /web/index.html
            port: jellyfin-http
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /web/index.html
            port: jellyfin-http
          initialDelaySeconds: 30
          timeoutSeconds: 5
      volumes:
      - name: jellyfin-pvc
        hostPath:
          path: /var/mnt/jfin
          type: Directory
